Updated results analysis for 1st revision of the paper

--- a/analysis/collect_data_baron.ipynb
+++ b/analysis/collect_data_baron.ipynb
@@ -39,7 +39,7 @@
     "    dfs = list()\n",
     "    resfile_folder = os.path.join(os.path.abspath(''), '..', 'results', 'run')\n",
     "\n",
-    "    files = list(glob(os.path.join(resfile_folder, '*-nonlinear_model-*')))\n",
+    "    files = list(glob(os.path.join(resfile_folder, '*-nonlinear_model_with_vi1_liftMTZ-*')))\n",
     "\n",
     "    for resfile in tqdm(files):\n",
     "        dfs.append(pd.read_csv(resfile))\n",
@@ -74,7 +74,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3df904df21f7450684bcf1004eefb853",
+       "model_id": "df347ae743454a07ab8f37da5ae990d2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -125,7 +125,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res.to_csv('baron-nonconcave-bounds.csv', index=False)"
+    "res.to_csv('baron-bounds.csv', index=False)"
    ]
   },
   {
