--- a/analysis/collect_data_concave_baron.ipynb
+++ b/analysis/collect_data_concave_baron.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,17 +10,13 @@
     "from typing import List\n",
     "from tqdm.notebook import tqdm\n",
     "import pandas as pd\n",
-    "import os\n"
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def instance_list() -> List[str]:\n",
@@ -35,72 +31,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "algo_globs = [\n",
+    "    '*-nonlinear_concave_model-*',\n",
+    "    '*-nonlinear_concave_model_with_vi1_liftMTZ-*'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def read_results() -> pd.DataFrame:\n",
     "    dfs = list()\n",
     "    resfile_folder = os.path.join(os.path.abspath(''), '..', 'results', 'run')\n",
     "\n",
-    "    files = list(glob(os.path.join(resfile_folder, '*-frankwolfe-*.txt')))\n",
-    "    files += list(glob(os.path.join(resfile_folder, '*-integer_linear_model_*-*.txt')))\n",
+    "    files = [glob(os.path.join(resfile_folder, glb)) for glb in algo_globs]\n",
+    "    files = [f for fs in files for f in fs]\n",
     "\n",
     "    for resfile in tqdm(files):\n",
-    "        dfs.append(pd.read_csv(resfile))\n",
+    "        df = pd.read_csv(resfile)\n",
+    "\n",
+    "        # Old results files were missing some header columns\n",
+    "        if 'add_vi1' not in df.columns:\n",
+    "            df['add_vi1'] = False\n",
+    "        if 'add_vi2' not in df.columns:\n",
+    "            df['add_vi2'] = False\n",
+    "        if 'add_vi3' not in df.columns:\n",
+    "            df['add_vi3'] = False\n",
+    "        if 'add_vi4' not in df.columns:\n",
+    "            df['add_vi4'] = False\n",
+    "        if 'liftMTZ' not in df.columns:\n",
+    "            df['liftMTZ'] = False\n",
+    "\n",
+    "        # And some other column was named differently\n",
+    "        if 'actual_tour_obj' in df.columns:\n",
+    "            df.rename(columns=dict(actual_tour_obj='original_obj'), inplace=True)\n",
+    "\n",
+    "        # Correct error in old results\n",
+    "        if df.loc[0, 'algorithm'] == 'nonlinear_model':\n",
+    "            df['algorithm'] = 'nonlinear_concave_model'\n",
+    "\n",
+    "        dfs.append(df)\n",
     "\n",
     "    return pd.concat(dfs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def find_missing(instances: List[str], res: pd.DataFrame) -> List[str]:\n",
-    "    return [i for i in instances if len(res[res.instance_basename == i]) != 3]"
+    "    return [i for i in instances if len(res[res.instance_basename == i]) < 2]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "instances = instance_list()\n"
+    "instances = instance_list()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6f3220f3635f4f898b71aef7a49678e2",
+       "model_id": "743c42d257764b76984a9b7fa7dc8d64",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/2352 [00:00<?, ?it/s]"
+       "  0%|          | 0/1568 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -108,17 +122,13 @@
     }
    ],
    "source": [
-    "res = read_results()\n"
+    "res = read_results()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "missing = find_missing(instances=instances, res=res)"
@@ -126,12 +136,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -139,7 +145,7 @@
        "[]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,19 +156,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "res.to_csv('model-based-upper-bounds.csv', index=False)"
+    "res.to_csv('baron-concave-bounds.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
