--- a/analysis/collect_data_labelling.ipynb
+++ b/analysis/collect_data_labelling.ipynb
@@ -16,7 +16,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def instance_list() -> List[str]:\n",
@@ -39,10 +43,15 @@
     "    dfs = list()\n",
     "    resfile_folder = os.path.join(os.path.abspath(''), '..', 'results', 'run')\n",
     "\n",
-    "    files = list(glob(os.path.join(resfile_folder, '*-nonlinear_concave_model-*')))\n",
+    "    files = list(glob(os.path.join(resfile_folder, '*-labelling_*')))\n",
     "\n",
     "    for resfile in tqdm(files):\n",
-    "        dfs.append(pd.read_csv(resfile))\n",
+    "        try:\n",
+    "            df = pd.read_csv(resfile)\n",
+    "        except:\n",
+    "            print(f\"Invalid file: {os.path.basename(resfile)}: skipping.\")\n",
+    "        else:\n",
+    "            dfs.append(df)\n",
     "\n",
     "    return pd.concat(dfs)"
    ]
@@ -54,12 +63,12 @@
    "outputs": [],
    "source": [
     "def find_missing(instances: List[str], res: pd.DataFrame) -> List[str]:\n",
-    "    return [i for i in instances if len(res[res.instance_basename == i]) == 0]"
+    "    return [i for i in instances if len(res[res.instance_basename == i]) != 3]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,18 +77,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c57dd97632d84b5db26caf848c9e9598",
+       "model_id": "6fe3dd6e0b2b4dcc970f373c65e2e0e6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/784 [00:00<?, ?it/s]"
+       "  0%|          | 0/2352 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -92,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +119,7 @@
        "[]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,29 +130,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Fix error in results\n",
-    "res['algorithm'] = 'nonlinear_concave_model'"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "res.to_csv('baron-concave-bounds.csv', index=False)"
+    "res[res.algorithm.isin(['labelling_RelaxedLabel', 'labelling_RelaxedTCLabel'])].to_csv('labelling-upper-bounds.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "res[res.algorithm == 'labelling_StrongLabel'].to_csv('labelling-lower-bounds.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
