--- a/analysis/collect_data_model_based_ubs.ipynb
+++ b/analysis/collect_data_model_based_ubs.ipynb
@@ -7,15 +7,29 @@
    "outputs": [],
    "source": [
     "from glob import glob\n",
-    "from typing import List\n",
+    "from typing import List, Dict\n",
+    "from collections import defaultdict\n",
     "from tqdm.notebook import tqdm\n",
     "import pandas as pd\n",
-    "import os\n"
+    "import os"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "algorithms = [\n",
+    "    'frankwolfe_with_vi1_with_vi4_liftMTZ',\n",
+    "    'integer_linear_model_LinearModelObjectiveFunction.LINEAR_APPROX_LOOSE_with_vi1_with_vi4_liftMTZ',\n",
+    "    'integer_linear_model_LinearModelObjectiveFunction.LINEAR_APPROX_TIGHT_with_vi1_with_vi4_liftMTZ'\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -35,60 +49,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "def read_results() -> pd.DataFrame:\n",
     "    dfs = list()\n",
+    "    files = list()\n",
     "    resfile_folder = os.path.join(os.path.abspath(''), '..', 'results', 'run')\n",
     "\n",
-    "    files = list(glob(os.path.join(resfile_folder, '*-labelling_*')))\n",
+    "    for algorithm in algorithms:\n",
+    "        files += list(glob(os.path.join(resfile_folder, f\"*-{algorithm}-*.txt\")))\n",
     "\n",
     "    for resfile in tqdm(files):\n",
-    "        try:\n",
-    "            df = pd.read_csv(resfile)\n",
-    "        except:\n",
-    "            print(f\"Invalid file: {os.path.basename(resfile)}: skipping.\")\n",
-    "        else:\n",
-    "            dfs.append(pd.read_csv(resfile))\n",
+    "        dfs.append(pd.read_csv(resfile))\n",
     "\n",
     "    return pd.concat(dfs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def find_missing(instances: List[str], res: pd.DataFrame) -> List[str]:\n",
-    "    return [i for i in instances if len(res[res.instance_basename == i]) != 3]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
-    "instances = instance_list()\n"
+    "def find_missing(instances: List[str], res: pd.DataFrame) -> Dict[str, int]:\n",
+    "    missing = defaultdict(list)\n",
+    "\n",
+    "    for i in instances:\n",
+    "        for algorithm in algorithms:\n",
+    "            if len(res[(res.instance_basename == i) & (res.algorithm == algorithm)]) == 0:\n",
+    "                missing[i].append(algorithm)\n",
+    "\n",
+    "    return missing"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "instances = instance_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3c783df022b4acd8fc2bcf1b65d6e03",
+       "model_id": "8c2bad9c3d10448f87914df9d980a987",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "  0%|          | 0/2352 [00:00<?, ?it/s]"
+       "  0%|          | 0/2402 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -96,13 +130,17 @@
     }
    ],
    "source": [
-    "res = read_results()\n"
+    "res = read_results()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "missing = find_missing(instances=instances, res=res)"
@@ -110,16 +148,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "defaultdict(list, {})"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,20 +168,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res[res.algorithm.isin(['labelling_RelaxedLabel', 'labelling_RelaxedTCLabel'])].to_csv('labelling-upper-bounds.csv', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "res[res.algorithm == 'labelling_StrongLabel'].to_csv('labelling-lower-bounds.csv', index=False)"
+    "res.to_csv('model-based-upper-bounds.csv', index=False)"
    ]
   }
  ],
