--- a/analysis/double_files.ipynb
+++ b/analysis/double_files.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "from glob import glob\n",
     "from shutil import move\n",
     "from os.path import exists\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import itertools"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,12 +27,12 @@
     "    d['results_file'] = file\n",
     "    dfs.append(d)\n",
     "\n",
-    "df = pd.concat(dfs)\n"
+    "df = pd.concat(dfs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,20 +41,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = {\n",
+    "    'instance_basename': df.instance_basename.unique(),\n",
+    "    'add_vi1': [True, False],\n",
+    "    'add_vi2': [True, False],\n",
+    "    'add_vi3': [True, False],\n",
+    "    'add_vi4': [True, False],\n",
+    "    'lift_mtz': [True, False]\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keys, values = zip(*params.items())\n",
+    "all_params = [dict(zip(keys, v)) for v in itertools.product(*values)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Moving ../results/run/2022-03-24-10-28-20-frankwolfe-hop_tsiligirides-3-55-0.1-2.txt\n"
+      "Moving ../results/run/2022-08-23-04-26-37-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-15-0.2-4.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-46-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-20-0.1-2.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-46-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-20-0.1-5.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-37-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-10-0.4-2.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-45-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-20-0.2-3.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-47-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-20-0.2-4.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-40-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-15-0.4-3.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-40-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-10-0.2-4.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-41-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-15-0.3-5.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-41-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-15-0.4-2.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-41-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-10-0.3-2.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-36-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-10-0.1-5.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-38-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-10-0.3-5.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-37-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-10-0.1-3.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-41-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-10-0.2-5.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-36-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-10-0.1-4.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-39-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-10-0.2-2.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-47-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-20-0.2-2.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-37-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-10-0.1-2.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-40-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-15-0.3-4.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-40-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-10-0.2-3.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-46-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-20-0.1-3.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-41-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-15-0.4-5.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-48-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-20-0.1-4.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-38-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-15-0.3-3.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-41-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-10-0.3-4.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-37-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-15-0.2-2.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-37-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-15-0.3-2.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-41-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-10-0.3-3.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-37-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-15-0.2-5.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-41-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-15-0.4-4.txt\n",
+      "Moving ../results/run/2022-08-23-04-26-38-frankwolfe_with_vi1_with_vi4_liftMTZ-hop_tsiligirides-1-15-0.2-3.txt\n"
      ]
     }
    ],
    "source": [
-    "for instance in df.instance_basename:\n",
-    "    di = df[df.instance_basename == instance]\n",
+    "for params in all_params:\n",
+    "    di = df.loc[(df[list(params)] == pd.Series(params)).all(axis=1)]\n",
     "    \n",
     "    if len(di) > 1:\n",
     "        newest_date = di.run_date.max()\n",
