--- a/analysis/get_bks.ipynb
+++ b/analysis/get_bks.ipynb
@@ -16,14 +16,11 @@
    "outputs": [],
    "source": [
     "def read_data() -> pd.DataFrame:\n",
-    "    ans = pd.read_csv('ans-bounds.csv')\n",
-    "    ans['BKS'] = ans.obj\n",
-    "\n",
-    "    bnc = pd.read_csv('baron-nonconcave-bounds.csv')\n",
+    "    bnc = pd.read_csv('baron-bounds.csv')\n",
     "    bnc['BKS'] = bnc.obj\n",
     "\n",
     "    bc = pd.read_csv('baron-concave-bounds.csv')\n",
-    "    bc['BKS'] = bc.actual_tour_obj\n",
+    "    bc['BKS'] = bc.original_obj\n",
     "\n",
     "    lbl = pd.read_csv('labelling-lower-bounds.csv')\n",
     "    lbl['BKS'] = lbl.obj\n",
@@ -32,7 +29,7 @@
     "    mdl = mdl[mdl.algorithm != 'frankwolfe'].copy()\n",
     "    mdl['BKS'] = mdl.lb_original_obj_value\n",
     "\n",
-    "    return pd.concat([ans, bnc, bc, lbl, mdl])\n",
+    "    return pd.concat([bnc, bc, lbl, mdl])\n",
     "    "
    ]
   },
@@ -56,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
