--- a/analysis/paper_results_lower_bounds.ipynb
+++ b/analysis/paper_results_lower_bounds.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,29 +12,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def read_data() -> pd.DataFrame:\n",
-    "    a = pd.read_csv('ans-bounds.csv')\n",
-    "    a['LB_VALUE'] = a.obj\n",
-    "\n",
-    "    b = pd.read_csv('baron-nonconcave-bounds.csv')\n",
+    "    b = pd.read_csv('baron-bounds.csv')\n",
     "    b['LB_VALUE'] = b.obj\n",
     "\n",
     "    c = pd.read_csv('baron-concave-bounds.csv')\n",
-    "    c['LB_VALUE'] = c.actual_tour_obj\n",
+    "    c['LB_VALUE'] = c.original_obj\n",
     "\n",
     "    l = pd.read_csv('labelling-lower-bounds.csv')\n",
     "    l['LB_VALUE'] = l.obj\n",
     "\n",
-    "    return pd.concat([a, b, c, l])"
+    "    return pd.concat([b, c, l])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,15 +39,15 @@
     "bks = pd.read_csv('bks.csv')\n",
     "\n",
     "pwl = pd.read_csv('model-based-upper-bounds.csv')\n",
-    "pwl = pwl[pwl.algorithm == 'integer_linear_model_LinearModelObjectiveFunction.LINEAR_APPROX_TIGHT'].copy()\n",
+    "pwl = pwl[pwl.algorithm == 'integer_linear_model_LinearModelObjectiveFunction.LINEAR_APPROX_TIGHT_with_vi1_with_vi4_liftMTZ'].copy()\n",
     "\n",
     "cnt = pd.read_csv('model-based-upper-bounds.csv')\n",
-    "cnt = cnt[cnt.algorithm == 'frankwolfe'].copy()"
+    "cnt = cnt[cnt.algorithm == 'frankwolfe_with_vi1_with_vi4_liftMTZ'].copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,22 +60,6 @@
     "        raise RuntimeError('Missing BKS value')\n",
     "\n",
     "    ub = bks_row.iloc[0]['BKS']\n",
-    "    lb = row['LB_VALUE']\n",
-    "\n",
-    "    if np.isnan(ub) or ub == 0:\n",
-    "        return 1\n",
-    "    else:\n",
-    "        return np.abs(ub - lb) / ub\n",
-    "\n",
-    "def get_gap_with_pwlin(row: pd.Series) -> float:\n",
-    "    i = row.instance_basename\n",
-    "    pwl_row = pwl[pwl.instance_basename == i]\n",
-    "\n",
-    "    if len(pwl_row) == 0:\n",
-    "        print(f\"No entry found in PWL file for instance {i}\")\n",
-    "        raise RuntimeError('Missing PWL value')\n",
-    "\n",
-    "    ub = pwl_row.iloc[0]['obj_bound']\n",
     "    lb = row['LB_VALUE']\n",
     "\n",
     "    if np.isnan(ub) or ub == 0:\n",
@@ -105,18 +86,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "res['GAP_WITH_BKS'] = res.apply(get_gap_with_bks, axis=1)\n",
-    "res['GAP_WITH_PWL'] = res.apply(get_gap_with_pwlin, axis=1)\n",
     "res['GAP_WITH_CNT'] = res.apply(get_gap_with_cnt, axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -153,61 +133,71 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>ans_1.01_1.00_1.00_0.80_0.40_2000_500_10000</th>\n",
-       "      <td>0.013659</td>\n",
-       "      <td>0.224362</td>\n",
-       "      <td>346.224440</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>labelling_StrongLabel</th>\n",
-       "      <td>0.471876</td>\n",
-       "      <td>0.586745</td>\n",
-       "      <td>3187.458006</td>\n",
+       "      <td>0.472</td>\n",
+       "      <td>0.574</td>\n",
+       "      <td>3187.458</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>nonlinear_concave_model</th>\n",
-       "      <td>0.001293</td>\n",
-       "      <td>0.214552</td>\n",
-       "      <td>647.857600</td>\n",
+       "      <td>0.002</td>\n",
+       "      <td>0.161</td>\n",
+       "      <td>647.858</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>nonlinear_model</th>\n",
-       "      <td>0.202523</td>\n",
-       "      <td>0.377198</td>\n",
-       "      <td>1473.286406</td>\n",
+       "      <th>nonlinear_concave_model_with_vi1_liftMTZ</th>\n",
+       "      <td>0.000</td>\n",
+       "      <td>0.159</td>\n",
+       "      <td>70.467</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>nonlinear_model_with_vi1_liftMTZ</th>\n",
+       "      <td>0.075</td>\n",
+       "      <td>0.220</td>\n",
+       "      <td>830.560</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                             GAP_WITH_BKS  GAP_WITH_CNT  \\\n",
-       "algorithm                                                                 \n",
-       "ans_1.01_1.00_1.00_0.80_0.40_2000_500_10000      0.013659      0.224362   \n",
-       "labelling_StrongLabel                            0.471876      0.586745   \n",
-       "nonlinear_concave_model                          0.001293      0.214552   \n",
-       "nonlinear_model                                  0.202523      0.377198   \n",
-       "\n",
-       "                                                  time_s  \n",
-       "algorithm                                                 \n",
-       "ans_1.01_1.00_1.00_0.80_0.40_2000_500_10000   346.224440  \n",
-       "labelling_StrongLabel                        3187.458006  \n",
-       "nonlinear_concave_model                       647.857600  \n",
-       "nonlinear_model                              1473.286406  "
+       "                                          GAP_WITH_BKS  GAP_WITH_CNT    time_s\n",
+       "algorithm                                                                     \n",
+       "labelling_StrongLabel                            0.472         0.574  3187.458\n",
+       "nonlinear_concave_model                          0.002         0.161   647.858\n",
+       "nonlinear_concave_model_with_vi1_liftMTZ         0.000         0.159    70.467\n",
+       "nonlinear_model_with_vi1_liftMTZ                 0.075         0.220   830.560"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "res.groupby('algorithm').mean()[['GAP_WITH_BKS', 'GAP_WITH_CNT', 'time_s']]"
+    "res.groupby('algorithm').mean()[['GAP_WITH_BKS', 'GAP_WITH_CNT', 'time_s']].round(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_vals(df: pd.DataFrame, last: bool = False) -> None:\n",
+    "    print(f\"{100*df['GAP_WITH_BKS'].mean():>5.2f} & \", end='')\n",
+    "    print(f\"{100*df['GAP_WITH_CNT'].mean():.2f} & \", end='')\n",
+    "    print(f\"{df.time_s.mean():>6.1f}\", end='')\n",
+    "\n",
+    "    if last:\n",
+    "        print(' \\\\\\\\')\n",
+    "    else:\n",
+    "        print(' & ', end='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -216,28 +206,28 @@
      "text": [
       "\\begin{tabular}{ll rrr rrr rrr rrr}\n",
       "\\toprule\n",
-      " & & \\multicolumn{3}{c}{\\textsc{LB-NLModel}} & \\multicolumn{3}{c}{\\textsc{LB-NLCModel}} & \\multicolumn{3}{c}{\\textsc{LB-Label}} & \\multicolumn{3}{c}{\\textsc{LB-ANS}} \\\\\n",
-      "\\cmidrule(lr){3-4}\\cmidrule(lr){5-6}\\cmidrule(lr){7-9}\\cmidrule(lr){10-12}\\cmidrule(lr){13-15}\\cmidrule(lr){16-18}\n",
+      " & & \\multicolumn{3}{c}{\\textsc{LB-NLModel}} & \\multicolumn{3}{c}{\\textsc{LB-NLCModel}} & \\multicolumn{3}{c}{\\textsc{LB-NLCModel}\\(^*\\)} & \\multicolumn{3}{c}{\\textsc{}LB-Label} \\\\\n",
+      "\\cmidrule(lr){3-5}\\cmidrule(lr){6-8}\\cmidrule(lr){9-11}\\cmidrule(lr){12-14}\n",
       "\\(\\alpha^{\\text{Tsi}}\\) & \\(\\beta^{\\text{Tsi}}\\) & G\\textsubscript{1}\\% & G\\textsubscript{2}\\% & T (s) & G\\textsubscript{1}\\% & G\\textsubscript{2}\\% & T (s) & G\\textsubscript{1}\\% & G\\textsubscript{2}\\% & T (s) & G\\textsubscript{1}\\% & G\\textsubscript{2}\\% & T (s) \\\\\n",
       "\\midrule\n",
-      "0.10 & 2 &  0.00 & 13.32 &  118.5 &  0.00 & 13.32 &  102.1 & 47.14 & 53.42 & 3177.7 &  1.70 & 14.79 & 359.1 \\\\\n",
-      "0.10 & 3 &  0.09 & 19.78 &  188.4 &  0.00 & 19.70 &  129.5 & 45.47 & 55.58 & 3188.4 &  0.68 & 20.24 & 347.0 \\\\\n",
-      "0.10 & 4 &  0.00 & 22.80 &  229.5 &  0.00 & 22.80 &  155.8 & 45.08 & 57.17 & 3182.6 &  1.60 & 23.99 & 323.9 \\\\\n",
-      "0.10 & 5 &  0.00 & 21.76 &  413.6 &  0.00 & 21.76 &  192.8 & 44.23 & 55.89 & 3183.4 &  1.04 & 22.65 & 336.5 \\\\\n",
-      "0.20 & 2 &  0.00 & 19.04 &  484.9 &  0.00 & 19.04 &  193.3 & 46.52 & 56.47 & 3185.7 &  0.84 & 19.67 & 324.0 \\\\\n",
-      "0.20 & 3 &  7.45 & 23.02 & 1174.4 &  0.00 & 16.46 &  245.7 & 46.66 & 55.49 & 3190.9 &  1.82 & 17.84 & 309.9 \\\\\n",
-      "0.20 & 4 & 10.17 & 32.48 & 1387.7 &  0.00 & 26.06 &  507.9 & 47.63 & 60.54 & 3184.7 &  1.30 & 27.04 & 339.3 \\\\\n",
-      "0.20 & 5 & 20.56 & 40.81 & 1881.4 &  0.00 & 26.16 &  651.5 & 46.40 & 59.88 & 3182.8 &  1.16 & 26.92 & 351.3 \\\\\n",
-      "0.30 & 2 & 15.82 & 32.53 & 1461.2 &  0.00 & 17.83 &  105.8 & 50.18 & 59.57 & 3188.8 &  1.25 & 18.84 & 344.8 \\\\\n",
-      "0.30 & 3 & 28.70 & 43.06 & 2006.8 &  0.00 & 19.71 &  341.2 & 48.23 & 59.43 & 3188.0 &  1.92 & 21.26 & 371.6 \\\\\n",
-      "0.30 & 4 & 38.62 & 54.43 & 2278.3 &  0.00 & 21.60 & 1056.2 & 47.45 & 60.49 & 3191.3 &  1.02 & 22.46 & 332.8 \\\\\n",
-      "0.30 & 5 & 39.52 & 55.74 & 2325.8 &  0.10 & 25.75 & 1482.3 & 45.18 & 59.58 & 3190.0 &  0.89 & 26.29 & 376.9 \\\\\n",
-      "0.40 & 2 & 31.33 & 49.25 & 2079.5 &  0.00 & 22.97 &  389.7 & 50.93 & 62.44 & 3193.3 &  1.84 & 24.51 & 342.7 \\\\\n",
-      "0.40 & 3 & 42.76 & 56.00 & 2428.1 &  0.00 & 19.86 & 1142.4 & 49.05 & 60.15 & 3191.4 &  2.66 & 21.96 & 356.0 \\\\\n",
-      "0.40 & 4 & 44.94 & 59.16 & 2585.4 &  0.22 & 22.97 & 1600.8 & 48.48 & 61.26 & 3188.7 &  1.27 & 23.90 & 361.8 \\\\\n",
-      "0.40 & 5 & 44.07 & 60.33 & 2529.0 &  1.75 & 27.30 & 2068.7 & 46.38 & 61.43 & 3191.6 &  0.89 & 26.63 & 361.9 \\\\\n",
+      "0.10 & 2 &  0.00 & 5.59 &   69.6 &  0.00 & 5.59 &   27.0 &  0.00 & 5.59 &  102.1 & 47.14 & 51.25 & 3177.7 \\\\\n",
+      "0.10 & 3 &  0.00 & 8.23 &  103.0 &  0.00 & 8.23 &   24.7 &  0.00 & 8.23 &  129.5 & 45.47 & 51.34 & 3188.4 \\\\\n",
+      "0.10 & 4 &  0.00 & 12.95 &  139.9 &  0.00 & 12.95 &   33.5 &  0.00 & 12.95 &  155.8 & 45.08 & 54.07 & 3182.6 \\\\\n",
+      "0.10 & 5 &  0.00 & 12.96 &  216.4 &  0.00 & 12.96 &   26.5 &  0.00 & 12.96 &  192.8 & 44.23 & 53.11 & 3183.4 \\\\\n",
+      "0.20 & 2 &  0.00 & 8.00 &  198.9 &  0.00 & 8.00 &   47.6 &  0.00 & 8.00 &  193.3 & 46.52 & 52.54 & 3185.7 \\\\\n",
+      "0.20 & 3 &  1.21 & 13.74 &  387.4 &  0.00 & 12.62 &   26.8 &  0.00 & 12.62 &  245.7 & 46.66 & 55.35 & 3190.9 \\\\\n",
+      "0.20 & 4 &  1.94 & 17.99 &  557.5 &  0.00 & 16.40 &   35.8 &  0.00 & 16.40 &  507.9 & 47.63 & 57.76 & 3184.7 \\\\\n",
+      "0.20 & 5 &  9.03 & 28.11 & 1058.7 &  0.00 & 20.49 &   39.3 &  0.00 & 20.49 &  651.5 & 46.40 & 59.38 & 3182.8 \\\\\n",
+      "0.30 & 2 &  0.00 & 9.29 &  282.1 &  0.00 & 9.29 &    9.7 &  0.00 & 9.29 &  105.8 & 50.18 & 56.77 & 3188.8 \\\\\n",
+      "0.30 & 3 &  7.77 & 22.28 &  864.6 &  0.00 & 15.30 &   16.1 &  0.00 & 15.30 &  341.2 & 48.23 & 58.35 & 3188.0 \\\\\n",
+      "0.30 & 4 & 14.37 & 33.89 & 1406.0 &  0.00 & 21.91 &   28.9 &  0.00 & 21.91 & 1056.2 & 47.45 & 61.38 & 3191.3 \\\\\n",
+      "0.30 & 5 & 11.85 & 35.91 & 1643.5 &  0.00 & 26.90 &  240.8 &  0.30 & 27.11 & 1482.3 & 45.27 & 61.63 & 3190.0 \\\\\n",
+      "0.40 & 2 &  5.60 & 16.97 &  844.0 &  0.00 & 11.78 &   12.8 &  0.00 & 11.78 &  389.7 & 50.93 & 58.80 & 3193.3 \\\\\n",
+      "0.40 & 3 & 14.62 & 32.36 & 1614.1 &  0.00 & 19.86 &   14.8 &  0.00 & 19.86 & 1142.4 & 49.05 & 61.39 & 3191.4 \\\\\n",
+      "0.40 & 4 & 25.42 & 43.32 & 1816.9 &  0.00 & 23.25 &  160.5 &  0.44 & 23.54 & 1600.8 & 48.57 & 61.88 & 3188.7 \\\\\n",
+      "0.40 & 5 & 28.60 & 50.77 & 2086.4 &  0.00 & 29.09 &  382.7 &  2.35 & 30.78 & 2068.7 & 46.65 & 63.69 & 3191.6 \\\\\n",
       "\\midrule\n",
-      "\\multicolumn{2}{l}{Overall} & 20.25 & 37.72 & 1473.3 &  0.13 & 21.46 &  647.9 & 47.19 & 58.67 & 3187.5 &  1.37 & 22.44 & 346.2 \\\\\n",
+      "\\multicolumn{2}{l}{Overall} &  7.53 & 22.02 &  830.6 &  0.00 & 15.91 &   70.5 &  0.19 & 16.05 &  647.9 & 47.22 & 57.42 & 3187.5 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n"
      ]
@@ -249,8 +239,9 @@
     "print(' & & ', end='')\n",
     "print('\\\\multicolumn{3}{c}{\\\\textsc{LB-NLModel}} & ', end='')\n",
     "print('\\\\multicolumn{3}{c}{\\\\textsc{LB-NLCModel}} & ', end='')\n",
-    "print('\\\\multicolumn{3}{c}{\\\\textsc{LB-Label}} & ', end='')\n",
-    "print('\\\\multicolumn{3}{c}{\\\\textsc{LB-ANS}} \\\\\\\\')\n",
+    "print('\\\\multicolumn{3}{c}{\\\\textsc{LB-NLCModel}\\\\(^*\\\\)} & ', end='')\n",
+    "print('\\\\multicolumn{3}{c}{\\\\textsc{}LB-Label} \\\\\\\\')\n",
+    "\n",
     "print('\\\\cmidrule(lr){3-5}\\\\cmidrule(lr){6-8}\\\\cmidrule(lr){9-11}\\\\cmidrule(lr){12-14}')\n",
     "print('\\\\(\\\\alpha^{\\\\text{Tsi}}\\\\) & \\\\(\\\\beta^{\\\\text{Tsi}}\\\\) & ', end='')\n",
     "print('G\\\\textsubscript{1}\\% & G\\\\textsubscript{2}\\% & T (s) & ' * 3, end='')\n",
@@ -263,48 +254,32 @@
     "\n",
     "        print(f\"{alpha:.2f} & {beta} & \", end='')\n",
     "\n",
-    "        df = f[f.algorithm == 'nonlinear_model']\n",
-    "        print(f\"{100*df['GAP_WITH_BKS'].mean():>5.2f} & \", end='')\n",
-    "        print(f\"{100*df['GAP_WITH_CNT'].mean():.2f} & \", end='')\n",
-    "        print(f\"{df.time_s.mean():>6.1f} & \", end='')\n",
+    "        df = f[f.algorithm == 'nonlinear_model_with_vi1_liftMTZ']\n",
+    "        print_vals(df)\n",
+    "\n",
+    "        df = f[f.algorithm == 'nonlinear_concave_model_with_vi1_liftMTZ']\n",
+    "        print_vals(df)\n",
     "\n",
     "        df = f[f.algorithm == 'nonlinear_concave_model']\n",
-    "        print(f\"{100*df['GAP_WITH_BKS'].mean():>5.2f} & \", end='')\n",
-    "        print(f\"{100*df['GAP_WITH_CNT'].mean():.2f} & \", end='')\n",
-    "        print(f\"{df.time_s.mean():>6.1f} & \", end='')\n",
+    "        print_vals(df)\n",
     "\n",
     "        df = f[f.algorithm == 'labelling_StrongLabel']\n",
-    "        print(f\"{100*df['GAP_WITH_BKS'].mean():>5.2f} & \", end='')\n",
-    "        print(f\"{100*df['GAP_WITH_CNT'].mean():.2f} & \", end='')\n",
-    "        print(f\"{df.time_s.mean():.1f} & \", end='')\n",
-    "\n",
-    "        df = f[f.algorithm.str.contains('ans')]\n",
-    "        print(f\"{100*df['GAP_WITH_BKS'].mean():>5.2f} & \", end='')\n",
-    "        print(f\"{100*df['GAP_WITH_CNT'].mean():.2f} & \", end='')\n",
-    "        print(f\"{df.time_s.mean():.1f} \\\\\\\\\")\n",
+    "        print_vals(df, last=True)\n",
     "\n",
     "print('\\\\midrule')\n",
     "print('\\\\multicolumn{2}{l}{Overall} & ', end='')\n",
     "\n",
-    "df = res[res.algorithm == 'nonlinear_model']\n",
-    "print(f\"{100*df['GAP_WITH_BKS'].mean():>5.2f} & \", end='')\n",
-    "print(f\"{100*df['GAP_WITH_CNT'].mean():.2f} & \", end='')\n",
-    "print(f\"{df.time_s.mean():>6.1f} & \", end='')\n",
+    "df = res[res.algorithm == 'nonlinear_model_with_vi1_liftMTZ']\n",
+    "print_vals(df)\n",
+    "\n",
+    "df = res[res.algorithm == 'nonlinear_concave_model_with_vi1_liftMTZ']\n",
+    "print_vals(df)\n",
     "\n",
     "df = res[res.algorithm == 'nonlinear_concave_model']\n",
-    "print(f\"{100*df['GAP_WITH_BKS'].mean():>5.2f} & \", end='')\n",
-    "print(f\"{100*df['GAP_WITH_CNT'].mean():.2f} & \", end='')\n",
-    "print(f\"{df.time_s.mean():>6.1f} & \", end='')\n",
+    "print_vals(df)\n",
     "\n",
     "df = res[res.algorithm == 'labelling_StrongLabel']\n",
-    "print(f\"{100*df['GAP_WITH_BKS'].mean():>5.2f} & \", end='')\n",
-    "print(f\"{100*df['GAP_WITH_CNT'].mean():.2f} & \", end='')\n",
-    "print(f\"{df.time_s.mean():.1f} & \", end='')\n",
-    "\n",
-    "df = res[res.algorithm.str.contains('ans')]\n",
-    "print(f\"{100*df['GAP_WITH_BKS'].mean():>5.2f} & \", end='')\n",
-    "print(f\"{100*df['GAP_WITH_CNT'].mean():.2f} & \", end='')\n",
-    "print(f\"{df.time_s.mean():.1f} \\\\\\\\\")\n",
+    "print_vals(df, last=True)\n",
     "\n",
     "print('\\\\bottomrule')\n",
     "print('\\\\end{tabular}')"
