--- a/analysis/paper_results_upper_bounds.ipynb
+++ b/analysis/paper_results_upper_bounds.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,8 +25,8 @@
     "\n",
     "    m = pd.read_csv('model-based-upper-bounds.csv')\n",
     "\n",
-    "    fw = m[m.algorithm == 'frankwolfe'].copy()\n",
-    "    im = m[m.algorithm != 'frankwolfe'].copy()\n",
+    "    fw = m[m.algorithm.str.contains('frankwolfe')].copy()\n",
+    "    im = m[~m.algorithm.str.contains('frankwolfe')].copy()\n",
     "\n",
     "    fw['VALID_UB'] = True\n",
     "    fw['BEST_POSSIBLE_UB'] = True\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,8 +74,10 @@
     "    lb = bks_row.iloc[0]['BKS']\n",
     "    ub = row['UB_VALUE']\n",
     "\n",
-    "    if row.VALID_UB and lb - ub > 1e-3:\n",
+    "    if row.VALID_UB and lb > ub + 0.1:\n",
     "        print(f\"Invalid bounds for {row.instance_basename}: {lb=:.2f}, {ub=:.2f}\")\n",
+    "    elif row.VALID_UB and ub < lb < ub + 0.1:\n",
+    "        return 0\n",
     "\n",
     "    if np.isnan(ub) or ub == 0:\n",
     "        return 1\n",
@@ -85,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -124,24 +126,24 @@
       "\\cmidrule(lr){3-4}\\cmidrule(lr){5-6}\\cmidrule(lr){7-8}\\cmidrule(lr){9-11}\\cmidrule(lr){12-14}\n",
       "\\(\\alpha^{\\text{Tsi}}\\) & \\(\\beta^{\\text{Tsi}}\\) & Gap\\% & T (s) & Gap\\% & T (s) & Gap\\% & T (s) & Val\\% & Gap\\% & T (s) & Val\\% & Gap\\% & T (s) \\\\\n",
       "\\midrule\n",
-      "0.10 & 2 & 11.30 & 42.6 &  8.17 & 41.9 & 13.32 & 1.3 & 28.57 & 34.58 & 2742.3 & 20.41 & 13.81 & 3020.8 \\\\\n",
-      "0.10 & 3 & 18.20 & 48.4 & 13.41 & 46.6 & 19.70 & 1.1 & 28.57 & 29.83 & 2722.1 & 20.41 & 14.61 & 3035.8 \\\\\n",
-      "0.10 & 4 & 23.44 & 48.5 & 17.24 & 47.1 & 22.80 & 1.2 & 28.57 & 28.79 & 2772.4 & 18.37 & 10.63 & 3015.6 \\\\\n",
-      "0.10 & 5 & 25.28 & 48.8 & 19.05 & 47.2 & 21.76 & 1.2 & 28.57 & 31.86 & 2769.0 & 16.33 & 11.45 & 3046.9 \\\\\n",
-      "0.20 & 2 & 24.82 & 52.9 & 18.23 & 52.2 & 19.04 & 1.2 & 22.45 & 35.30 & 2893.3 & 16.33 & 16.05 & 3067.6 \\\\\n",
-      "0.20 & 3 & 34.93 & 55.7 & 27.09 & 53.9 & 16.46 & 1.2 & 20.41 & 30.94 & 2964.5 & 14.29 & 14.66 & 3126.5 \\\\\n",
-      "0.20 & 4 & 40.34 & 57.9 & 32.23 & 57.0 & 26.06 & 1.3 & 24.49 & 25.87 & 2866.6 & 16.33 &  8.56 & 3094.0 \\\\\n",
-      "0.20 & 5 & 44.22 & 56.6 & 35.64 & 56.2 & 26.16 & 1.3 & 24.49 & 26.48 & 2876.1 & 14.29 &  8.28 & 3112.4 \\\\\n",
-      "0.30 & 2 & 33.51 & 53.9 & 25.38 & 53.6 & 17.83 & 1.4 & 22.45 & 29.69 & 2975.2 & 16.33 & 10.15 & 3075.1 \\\\\n",
-      "0.30 & 3 & 44.56 & 57.0 & 36.15 & 55.9 & 19.71 & 1.6 & 20.41 & 30.74 & 2978.2 & 14.29 &  9.80 & 3125.2 \\\\\n",
-      "0.30 & 4 & 50.80 & 57.1 & 42.13 & 55.9 & 21.60 & 1.4 & 24.49 & 25.40 & 2915.6 & 14.29 & 10.73 & 3117.5 \\\\\n",
-      "0.30 & 5 & 56.78 & 58.9 & 47.99 & 58.4 & 25.66 & 1.6 & 20.41 & 23.72 & 2990.2 & 14.29 &  7.41 & 3105.1 \\\\\n",
-      "0.40 & 2 & 43.77 & 55.7 & 35.56 & 55.2 & 22.97 & 1.2 & 22.45 & 33.27 & 2941.4 & 16.33 & 10.45 & 3080.6 \\\\\n",
-      "0.40 & 3 & 54.48 & 58.2 & 45.86 & 58.0 & 19.86 & 1.9 & 22.45 & 28.00 & 2950.5 & 18.37 &  6.81 & 3090.8 \\\\\n",
-      "0.40 & 4 & 58.68 & 60.6 & 50.19 & 59.3 & 22.82 & 1.7 & 26.53 & 21.47 & 2826.6 & 16.33 &  8.14 & 3102.0 \\\\\n",
-      "0.40 & 5 & 62.30 & 56.4 & 54.50 & 56.4 & 25.98 & 1.9 & 22.45 & 23.10 & 2933.4 & 14.29 &  8.86 & 3126.0 \\\\\n",
+      "0.10 & 2 &  9.97 & 29.3 &  6.95 & 22.5 &  5.59 & 5.9 & 28.57 & 34.58 & 2742.3 & 20.41 & 13.81 & 3020.8 \\\\\n",
+      "0.10 & 3 & 16.29 & 33.2 & 11.70 & 30.3 &  8.23 & 5.4 & 28.57 & 29.83 & 2722.1 & 20.41 & 14.61 & 3035.8 \\\\\n",
+      "0.10 & 4 & 21.37 & 35.9 & 15.17 & 34.2 & 12.95 & 5.9 & 28.57 & 28.79 & 2772.4 & 18.37 & 10.63 & 3015.6 \\\\\n",
+      "0.10 & 5 & 23.31 & 36.7 & 17.41 & 35.8 & 12.96 & 6.2 & 28.57 & 31.86 & 2769.0 & 16.33 & 11.45 & 3046.9 \\\\\n",
+      "0.20 & 2 & 21.65 & 36.5 & 15.99 & 33.0 &  8.00 & 6.2 & 22.45 & 35.30 & 2893.3 & 16.33 & 16.05 & 3067.6 \\\\\n",
+      "0.20 & 3 & 31.66 & 41.6 & 24.05 & 37.7 & 12.62 & 6.1 & 20.41 & 30.94 & 2964.5 & 14.29 & 14.66 & 3126.5 \\\\\n",
+      "0.20 & 4 & 37.87 & 44.8 & 29.49 & 43.1 & 16.40 & 6.8 & 24.49 & 25.87 & 2866.6 & 16.33 &  8.56 & 3094.0 \\\\\n",
+      "0.20 & 5 & 40.43 & 43.3 & 32.24 & 42.1 & 20.49 & 6.5 & 24.49 & 26.48 & 2876.1 & 14.29 &  8.28 & 3112.4 \\\\\n",
+      "0.30 & 2 & 31.03 & 44.7 & 23.16 & 40.5 &  9.29 & 5.9 & 22.45 & 29.69 & 2975.2 & 16.33 & 10.15 & 3075.1 \\\\\n",
+      "0.30 & 3 & 41.80 & 45.6 & 33.18 & 43.9 & 15.30 & 7.7 & 20.41 & 30.74 & 2978.2 & 14.29 &  9.80 & 3125.2 \\\\\n",
+      "0.30 & 4 & 47.50 & 46.0 & 39.03 & 45.5 & 21.91 & 6.2 & 24.49 & 25.40 & 2915.6 & 14.29 & 10.73 & 3117.5 \\\\\n",
+      "0.30 & 5 & 53.69 & 48.3 & 45.18 & 47.8 & 26.90 & 7.4 & 20.41 & 23.72 & 2990.2 & 14.29 &  7.41 & 3105.1 \\\\\n",
+      "0.40 & 2 & 40.15 & 46.1 & 32.29 & 44.1 & 11.78 & 5.6 & 22.45 & 33.27 & 2941.4 & 16.33 & 10.45 & 3080.6 \\\\\n",
+      "0.40 & 3 & 52.43 & 49.3 & 43.90 & 48.7 & 19.86 & 6.4 & 22.45 & 28.00 & 2950.5 & 18.37 &  6.81 & 3090.8 \\\\\n",
+      "0.40 & 4 & 55.92 & 48.7 & 47.34 & 48.4 & 23.25 & 6.3 & 26.53 & 21.47 & 2826.6 & 16.33 &  8.14 & 3102.0 \\\\\n",
+      "0.40 & 5 & 60.25 & 49.1 & 52.45 & 48.7 & 29.09 & 7.0 & 22.45 & 23.10 & 2933.4 & 14.29 &  8.86 & 3126.0 \\\\\n",
       "\\midrule\n",
-      "\\multicolumn{2}{l}{Overall} & 39.21 & 54.3 & 31.80 & 53.4 & 21.36 & 1.4 & 24.23 & 28.73 & 2882.3 & 16.33 & 10.77 & 3083.9 \\\\\n",
+      "\\multicolumn{2}{l}{Overall} & 36.60 & 42.4 & 29.36 & 40.4 & 15.91 & 6.3 & 24.23 & 28.73 & 2882.3 & 16.33 & 10.77 & 3083.9 \\\\\n",
       "\\bottomrule\n",
       "\\end{tabular}\n"
      ]
@@ -169,15 +171,15 @@
     "        print(f\"{alpha:.2f} & {beta} & \", end='')\n",
     "\n",
     "        # Linear UB\n",
-    "        df = f[f.algorithm == 'integer_linear_model_LinearModelObjectiveFunction.LINEAR_APPROX_LOOSE']\n",
+    "        df = f[f.algorithm == 'integer_linear_model_LinearModelObjectiveFunction.LINEAR_APPROX_LOOSE_with_vi1_with_vi4_liftMTZ']\n",
     "        print(f\"{pct_gap_valid_only(df):>5.2f} & {df.time_s.mean():.1f} & \", end='')\n",
     "\n",
     "        # Piecewise-linear UB\n",
-    "        df = f[f.algorithm == 'integer_linear_model_LinearModelObjectiveFunction.LINEAR_APPROX_TIGHT']\n",
+    "        df = f[f.algorithm == 'integer_linear_model_LinearModelObjectiveFunction.LINEAR_APPROX_TIGHT_with_vi1_with_vi4_liftMTZ']\n",
     "        print(f\"{pct_gap_valid_only(df):>5.2f} & {df.time_s.mean():.1f} & \", end='')\n",
     "\n",
     "        # Frank-Wolfe continuous relaxation UB\n",
-    "        df = f[f.algorithm == 'frankwolfe']\n",
+    "        df = f[f.algorithm == 'frankwolfe_with_vi1_with_vi4_liftMTZ']\n",
     "        print(f\"{pct_gap_valid_only(df):>5.2f} & {df.time_s.mean():.1f} & \", end='')\n",
     "\n",
     "        # State-space relaxation labelling\n",
@@ -192,13 +194,13 @@
     "\n",
     "print('\\\\multicolumn{2}{l}{Overall} & ', end='')\n",
     "\n",
-    "df = res[res.algorithm == 'integer_linear_model_LinearModelObjectiveFunction.LINEAR_APPROX_LOOSE']\n",
+    "df = res[res.algorithm == 'integer_linear_model_LinearModelObjectiveFunction.LINEAR_APPROX_LOOSE_with_vi1_with_vi4_liftMTZ']\n",
     "print(f\"{pct_gap_valid_only(df):>5.2f} & {df.time_s.mean():.1f} & \", end='')\n",
     "\n",
-    "df = res[res.algorithm == 'integer_linear_model_LinearModelObjectiveFunction.LINEAR_APPROX_TIGHT']\n",
+    "df = res[res.algorithm == 'integer_linear_model_LinearModelObjectiveFunction.LINEAR_APPROX_TIGHT_with_vi1_with_vi4_liftMTZ']\n",
     "print(f\"{pct_gap_valid_only(df):>5.2f} & {df.time_s.mean():.1f} & \", end='')\n",
     "\n",
-    "df = res[res.algorithm == 'frankwolfe']\n",
+    "df = res[res.algorithm == 'frankwolfe_with_vi1_with_vi4_liftMTZ']\n",
     "print(f\"{pct_gap_valid_only(df):>5.2f} & {df.time_s.mean():.1f} & \", end='')\n",
     "\n",
     "df = res[res.algorithm == 'labelling_RelaxedLabel']\n",
@@ -211,13 +213,6 @@
     "print('\\\\end{tabular}')\n",
     "        "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
