Extracted new info from PwLin feasible tours

--- a/analysis/paper_results_upper_bounds.ipynb
+++ b/analysis/paper_results_upper_bounds.ipynb
@@ -213,6 +213,65 @@
     "print('\\\\end{tabular}')\n",
     "        "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comparison of solution characteristics\n",
+    "#### Solutions from Baron vs. PwLin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pw = res[res.algorithm=='integer_linear_model_LinearModelObjectiveFunction.LINEAR_APPROX_TIGHT_with_vi1_with_vi4_liftMTZ']\n",
+    "br = pd.read_csv('baron-concave-bounds.csv')\n",
+    "br = br[br.algorithm == 'nonlinear_concave_model_with_vi1_liftMTZ']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(27.46521309352883, 5.492142638938807)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pw.pct_custs_visited_which_are_tb.mean(), br.pct_custs_visited_which_are_tb.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.7018914897186171, 0.9596684230753166)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1 - (pw.avg_travel_time_after_tb_cust / pw.tour_duration).mean(), 1 - (br.avg_travel_time_after_tb_cust / br.tour_duration).mean()"
+   ]
   }
  ],
  "metadata": {
